gemini ai text updates

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -143,7 +143,7 @@
         "prompt": "Ask AI to analyze how MisoBio can benefit from Canabinote services.",
         "button": "Analyze Opportunity",
         "loading": "Analyzing MisoBio and Canabinote data...",
-        "result": "Cross-analysis indicates 94% synergy. MisoBio gains a direct prescription channel eliminating friction in the patient journey, while Canabinote technology provides Real World Evidence (RWE) data crucial for market expansion. We project a 27% increase in patient LTV (Lifetime Value).",
+        "result": "By integrating Canabinote’s clinical ecosystem, Miso Bio can evolve from a high-volume hemp manufacturer into a sophisticated medical authority, leveraging your White Label Prescription Environment to offer B2B clients a turnkey digital platform for doctors. This partnership bridges the gap between Miso Bio’s massive production capacity and the end-patient by providing the Real-World Evidence and scientific legitimacy needed to overcome international trust barriers, ultimately transforming their raw materials into high-margin, data-backed clinical solutions that drive long-term prescriber loyalty.",
         "reset": "New Analysis"
     }
 }
