--- a/i18n/es.json
+++ b/i18n/es.json
@@ -143,7 +143,6 @@
         "prompt": "Pida a la IA que analice cómo MisoBio puede beneficiarse de los servicios de Canabinote.",
         "button": "Analizar Oportunidad",
         "loading": "Analizando datos de MisoBio y Canabinote...",
-        "result": "Al integrar el ecosistema clínico de Canabinote, Miso Bio puede evolucionar de un fabricante de cáñamo de alto volumen a una autoridad médica sofisticada, aprovechando su Entorno de Prescripción White Label para ofrecer a los clientes B2B una plataforma digital llave en mano para médicos. Esta asociación cierra la brecha entre la enorme capacidad de producción de Miso Bio y el paciente final al proporcionar la Evidencia del Mundo Real y la legitimidad científica necesarias para superar las barreras de confianza internacionales, transformando en última instancia sus materias primas en soluciones clínicas respaldadas por datos y de alto margen que impulsan la lealtad a largo plazo de los prescriptores.",
-        "reset": "Nueva Análisis"
+        "result": "Al integrar el ecosistema clínico de Canabinote, Miso Bio puede evolucionar de un fabricante de cáñamo de alto volumen a una autoridad médica sofisticada, aprovechando su Entorno de Prescripción White Label para ofrecer a los clientes B2B una plataforma digital llave en mano para médicos. Esta asociación cierra la brecha entre la enorme capacidad de producción de Miso Bio y el paciente final al proporcionar la Evidencia del Mundo Real y la legitimidad científica necesarias para superar las barreras de confianza internacionales, transformando en última instancia sus materias primas en soluciones clínicas respaldadas por datos y de alto margen que impulsan la lealtad a largo plazo de los prescriptores."
     }
 }
