--- a/i18n/pt.json
+++ b/i18n/pt.json
@@ -144,7 +144,6 @@
         "prompt": "Peça para a IA analisar como a MisoBio pode se beneficiar dos serviços Canabinote.",
         "button": "Analisar Oportunidade",
         "loading": "Analisando dados da MisoBio e Canabinote...",
-        "result": "Ao integrar o ecossistema clínico da Canabinote, a Miso Bio pode evoluir de um fabricante de cânhamo de alto volume para uma autoridade médica sofisticada, aproveitando seu Ambiente de Prescrição White Label para oferecer aos clientes B2B uma plataforma digital turnkey para médicos. Esta parceria preenche a lacuna entre a enorme capacidade de produção da Miso Bio e o paciente final, fornecendo a Evidência do Mundo Real e a legitimidade científica necessárias para superar as barreiras de confiança internacionais, transformando em última instância suas matérias-primas em soluções clínicas respaldadas por dados e de alta margem que impulsionam a lealdade do prescritor a longo prazo.",
-        "reset": "Realizar nova análise"
+        "result": "Ao integrar o ecossistema clínico da Canabinote, a Miso Bio pode evoluir de um fabricante de cânhamo de alto volume para uma autoridade médica sofisticada, aproveitando seu Ambiente de Prescrição White Label para oferecer aos clientes B2B uma plataforma digital turnkey para médicos. Esta parceria preenche a lacuna entre a enorme capacidade de produção da Miso Bio e o paciente final, fornecendo a Evidência do Mundo Real e a legitimidade científica necessárias para superar as barreiras de confiança internacionais, transformando em última instância suas matérias-primas em soluções clínicas respaldadas por dados e de alta margem que impulsionam a lealdade do prescritor a longo prazo."
     }
 }
