--- a/i18n/en.json
+++ b/i18n/en.json
@@ -114,7 +114,7 @@
       "title": "Investment",
       "description": "Personalized proposal for immediate implementation.",
       "card1": {
-        "gemini_tag": "Gemini Recommendation",
+        "gemini_tag": "MisoBio best pick",
         "title": "White Label Platform",
         "description": "Complete prescription and recommendation system.",
         "features": {
