--- a/i18n/es.json
+++ b/i18n/es.json
@@ -114,7 +114,7 @@
      "title":"Inversión", 
      "description":"Propuesta personalizada para implementación inmediata.",
      "card1":{
-       "gemini_tag": "Recomendación Gemini",
+       "gemini_tag": "Mejor elección para MisoBio",
        "title":"Plataforma White Label", 
        "description":"Sistema completo de prescripción y recomendación.",
        "features":{
