--- a/i18n/pt.json
+++ b/i18n/pt.json
@@ -114,7 +114,7 @@
         "title": "Investimento",
         "subtitle": "Planos flexíveis para atender às necessidades da MisoBio.",
         "card1": {
-            "gemini_tag": "Recomendação Gemini",
+            "gemini_tag": "Melhor escolha para MisoBio",
             "title": "Plataforma White Label",
             "tag": "Incluso",
             "description": "Implementação completa da plataforma personalizada para a MisoBio.",
