--- a/i18n/pt.json
+++ b/i18n/pt.json
@@ -38,8 +38,8 @@
     "title": "O que é a Plataforma de Prescrição White Label?",
     "description": "É uma plataforma de saúde digital personalizada que coloca a MisoBio no centro da tomada de decisão clínica. Uma ferramenta robusta para os médicos e uma fonte de inteligência para sua marca.",
     "card1": {
-      "title": "Prescrição Digital",
-      "description": "Integração fluida na clínica."
+      "title": "Educação médica",
+      "description": "Apoio à prescrição por condições clínicas"
     },
     "card2": {
       "title": "Monitoramento",
@@ -48,14 +48,22 @@
     "card3": {
       "title": "Identidade Própria",
       "description": "Sua marca, nossa tecnologia."
-    }
+    },
+    "images": {
+        "quimiotipo":{
+          "src": "img/quimiotipo.png"},
+        "dashboard":{
+          "src":"img/dashboard.png"},
+        "configurações":{
+          "src":"img/configurações.png"}
+      }
     },
     "diferenciais": {
       "title": "Por que ter um ambiente personalizado?",
       "subtitle": "Vantagens estratégicas para marcas que buscam liderança.",
       "card1": {
-        "title": "Lealdade do Médico",
-        "description": "Experiência contínua e suporte para a prática clínica diária, criando um vínculo genuíno entre médico e marca."
+        "title": "Ambiente seguro para prescrição",
+        "description": "Resultando em maior assertividade e aderência ao tratamento pelo paciente."
       },
       "card2": {
         "title": "Dados Exclusivos",
@@ -74,16 +82,16 @@
       "title": "O que está incluso na implementação?",
       "subtitle": "Tudo o que é necessário para lançar sua plataforma White Label de forma rápida e eficiente.",
       "card1": {
-        "overline": "Configuração",
-        "title": "Configuração Personalizada",
+        "overline": "Branding",
+        "title": "Personalização Visual",
         "description": "Adaptação completa da plataforma com a identidade visual e elementos da marca MisoBio.",
-        "bottom": "Experiência única para médicos e pacientes."
+        "bottom": "Experiência única."
       },
         "card2": {
             "overline": "Integração",
-            "title": "Integração Clínica",
-            "description": "Implementação técnica para garantir que a plataforma funcione perfeitamente dentro do ambiente clínico.",
-            "bottom": "Integração perfeita com sistemas existentes da clínica."
+            "title": "Configuração do sistema",
+            "description": "Integração do catálogo de produtos e protocolos clínicos da MisoBio.",
+            "bottom": "Conexão perfeita."
         },
         "card3": {
             "overline": "Treinamento",
@@ -92,16 +100,16 @@
             "bottom": "Apoio dedicado para maximizar o engajamento."
         },
         "card4": { 
-            "overline":"Conteúdo",
-            "title": "Monitoramento e Relatórios",
+            "overline":"Recursos",
+            "title": "Monitoramento de Desempenho",
             "description": "Ferramentas de análise para acompanhar o desempenho da plataforma e o engajamento dos médicos.",
-            "bottom": "Relatórios detalhados."
+            "bottom": "Dados estratégicos."
         },
         "card5": {
-            "overline": "Atualizações",
-            "title": "Atualizações Regulares",
-            "description": "Manutenção e melhorias contínuas para garantir que a plataforma esteja sempre atualizada com as últimas tecnologias e tendências do mercado.",
-            "bottom": "Tecnologia sempre atualizada."
+            "overline": "Permissões",
+            "title": "Perfis de Acesso",
+            "description": "Estrutura inicial de perfis de acesso (administrador, prescritores, suporte, etc.).",
+            "bottom": "Gestão de Equipes"
         },
         "card6": {
             "overline": "Compliance",
@@ -114,7 +122,7 @@
         "title": "Investimento",
         "subtitle": "Planos flexíveis para atender às necessidades da MisoBio.",
         "card1": {
-            "gemini_tag": "Melhor escolha para MisoBio",
+            "gemini_tag": "Plano mensal",
             "title": "Plataforma White Label",
             "tag": "Incluso",
             "description": "Implementação completa da plataforma personalizada para a MisoBio.",
@@ -127,7 +135,7 @@
         },
         "card2": {
             "title": "Educação & Engajamento",
-            "tag": "Opcional",
+            "tag": "Pacote avulso",
             "description": "Programa de capacitação com médico referência.",
             "features": {
                 "feature1": "6 Encontros quinzenais online",
