--- a/i18n/en.json
+++ b/i18n/en.json
@@ -97,7 +97,7 @@
         "overline": "Training",
         "title": "Training and Support",
         "description": "Medical team training and ongoing support to ensure effective platform use.",
-        "bottom": "Dedicated support to maximize engagement"
+        "bottom": "Maximize engagement"
       },
       "card4": {
         "overline": "Resources",
@@ -115,7 +115,7 @@
         "overline": "Compliance",
         "title": "Regulatory Compliance",
         "description": "Ensuring that the platform complies with all standards and regulations applicable to the healthcare sector.",
-        "bottom": "Security and compliance guaranteed."
+        "bottom": "Compliance guaranteed."
       }
     },
     "investimento": {
