--- a/i18n/en.json
+++ b/i18n/en.json
@@ -30,9 +30,9 @@
         "label": "Email",
         "placeholder": "john@clinic.com"
       },
-      "submit": "Send"
+      "submit": "Continue to reach us"
     },
-    "disclaimer": "By clicking, you agree to be contacted by the Canabinote team to complete commercial procedures."
+    "disclaimer": "By clicking, you will be redirected to your email provider, please send us the email to proceed with the business arrangements."
   },
   "solução": {
     "title": "What is the White Label Prescription Platform?",
